// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Demo dropdown button should be disabled with empty demos 1`] = `
<Dropdown
  className=""
  direction="down"
  dropdownItems={Array []}
  isGrouped={false}
  isOpen={false}
  isPlain={false}
  onSelect={[Function]}
  position="right"
  style={
    Object {
      "marginBottom": 16,
      "marginLeft": 16,
    }
  }
  toggle={
    <DropdownToggle
      className=""
      disabled={true}
      iconComponent={[Function]}
      id=""
      isActive={false}
      isFocused={false}
      isHovered={false}
      isOpen={false}
      isPlain={false}
      onToggle={[Function]}
      parentRef={null}
    >
      Load demo...
    </DropdownToggle>
  }
/>
`;

exports[`Demo dropdown button should render correctly with a couple of demos 1`] = `
<Dropdown
  className=""
  direction="down"
  dropdownItems={
    Array [
      <Item
        className=""
        component="a"
        href="#"
        isDisabled={false}
        isHovered={false}
      >
        demo 1
      </Item>,
      <Item
        className=""
        component="a"
        href="#"
        isDisabled={false}
        isHovered={false}
      >
        demo 2
      </Item>,
    ]
  }
  isGrouped={false}
  isOpen={false}
  isPlain={false}
  onSelect={[Function]}
  position="right"
  style={
    Object {
      "marginBottom": 16,
      "marginLeft": 16,
    }
  }
  toggle={
    <DropdownToggle
      className=""
      disabled={false}
      iconComponent={[Function]}
      id=""
      isActive={false}
      isFocused={false}
      isHovered={false}
      isOpen={false}
      isPlain={false}
      onToggle={[Function]}
      parentRef={null}
    >
      Load demo...
    </DropdownToggle>
  }
/>
`;
